@@ -22,6 +22,7 @@ import java.util.Arrays;
 
 import org.apache.lucene.store.BufferedIndexInput;
 import org.apache.lucene.store.IndexInput;
+import org.apache.lucene.util.MathUtil;
 
 /**
  * This abstract class reads skip lists with multiple levels.
@@ -184,21 +185,9 @@ public abstract class MultiLevelSkipListReader {
     }
   }
   
-  /** returns x == 0 ? 0 : Math.floor(Math.log(x) / Math.log(base)) */
-  static int log(int x, int base) {
-    assert base >= 2;
-    int ret = 0;
-    long n = base; // needs to be a long to avoid overflow
-    while (x >= n) {
-      n *= base;
-      ret++;
-    }
-    return ret;
-  }
-  
   /** Loads the skip levels  */
   private void loadSkipLevels() throws IOException {
-    numberOfSkipLevels = log(docCount, skipInterval[0]);
+    numberOfSkipLevels = MathUtil.log(docCount, skipInterval[0]);
     if (numberOfSkipLevels > maxNumberOfSkipLevels) {
       numberOfSkipLevels = maxNumberOfSkipLevels;
     }
